fix overflow issues

--- a/src/components/AddUserItem/index.css
+++ b/src/components/AddUserItem/index.css
@@ -62,6 +62,7 @@
   flex-direction: column;
   align-items: stretch;
   margin-top: 24px;
+  margin-bottom: 16px;
 }
 @media screen and (min-width: 576px) {
   .form-container {
